# Composite

./: CMakeLists.txt  README.md  main.html
src/: NodeTypes.h  main.cpp
src/Color/: Color.cpp  Color.h
src/Input/: Input.cpp  Input.h
src/Output/: Output.cpp  Output.h
